# fast-scraping

./: README.md  pyproject.toml
data_transform/: compressor.py  table_rol.py
fast_scraping/: app.py
fast_scraping/scraping/: compressor.py  scraper_rol.py
